<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/text_icons"

    >
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="5"
    android:textSize="48sp"
    android:divider="@color/divider_color"
    android:dividerPadding="2dp"
    android:gravity="center|center_vertical"
    android:padding="10dp"
    android:text="How do you spell Christmassy?"
    />
    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:textSize="48sp"
        android:divider="@color/divider_color"
        android:dividerPadding="2dp"
        android:gravity="right|bottom"
        android:padding="10dp"
        android:text="CHRISTMAS"

        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_color"
        android:layout_marginBottom="2dp"
        />
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button

            android:text="@string/seven"
            android:textSize="24sp"
            android:id="@+id/btnSeven"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            android:onClick="onDigit"
            android:textColor="@color/text_icons"
            app:backgroundTint="@color/primary_dark_color"
            />

        <Button
            android:text="@string/eight"
            android:id="@+id/btnEight"
            android:textSize="24sp"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            android:onClick="onDigit"
            android:textColor="@color/text_icons"
            app:backgroundTint="@color/primary_dark_color"
            />

        <Button
            android:id="@+id/btnNine"
            android:textSize="24sp"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            android:onClick="onDigit"
            android:textColor="@color/text_icons"
            app:backgroundTint="@color/primary_dark_color"
            android:text="@string/nine"
            />

        <Button
            android:id="@+id/btnDivide"
            android:textSize="24sp"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            android:onClick="onDigit"
            android:textColor="@color/text_icons"
            app:backgroundTint="@color/primary_dark_color"
            android:text="@string/divide"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnFour"
            android:textSize="24sp"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            android:onClick="onDigit"
            android:textColor="@color/text_icons"
            app:backgroundTint="@color/primary_dark_color"
            android:text="@string/four"

            />

        <Button
            android:id="@+id/btnFive"
            android:textSize="24sp"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            android:onClick="onDigit"
            android:textColor="@color/text_icons"
            app:backgroundTint="@color/primary_dark_color"
            android:text="@string/five"
            />
        <Button
            android:id="@+id/btnSix"
            android:textSize="24sp"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            android:onClick="onDigit"
            android:textColor="@color/text_icons"
            app:backgroundTint="@color/primary_dark_color"
            android:text="@string/six"

            />
        <Button
            android:id="@+id/btnTimes"
            android:textSize="24sp"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            android:onClick="onDigit"
            android:textColor="@color/text_icons"
            app:backgroundTint="@color/primary_dark_color"
            android:text="@string/times"

            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/btnOne"
            android:textSize="24sp"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            android:onClick="onDigit"
            android:textColor="@color/text_icons"
            app:backgroundTint="@color/primary_dark_color"
            android:text="@string/one"

            />
        <Button
            android:id="@+id/btnTwo"
            android:textSize="24sp"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            android:onClick="onDigit"
            android:textColor="@color/text_icons"
            app:backgroundTint="@color/primary_dark_color"
            android:text="@string/two"

            />
        <Button
            android:id="@+id/btnThree"
            android:textSize="24sp"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            android:onClick="onDigit"
            android:textColor="@color/text_icons"
            app:backgroundTint="@color/primary_dark_color"
            android:text="@string/three"

            />
        <Button
            android:id="@+id/btnMinus"
            android:textSize="24sp"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            android:onClick="onDigit"
            android:textColor="@color/text_icons"
            app:backgroundTint="@color/primary_dark_color"
            android:text="@string/minus"

            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:id="@+id/btnDecimal"
            android:textSize="24sp"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            android:onClick="onDigit"
            android:textColor="@color/text_icons"
            app:backgroundTint="@color/primary_dark_color"
            android:text="@string/decimal"

            />
        <Button
            android:id="@+id/btnZero"
            android:textSize="24sp"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            android:onClick="onDigit"
            android:textColor="@color/text_icons"
            app:backgroundTint="@color/primary_dark_color"
            android:text="@string/zero"

            />


        <Button
            android:id="@+id/btnPlus"
            android:textSize="24sp"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            android:onClick="onDigit"
            android:textColor="@color/text_icons"
            app:backgroundTint="@color/primary_dark_color"
            android:text="@string/plus"

            />
        <Button
            android:id="@+id/btnClear"
            android:textSize="24sp"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            android:onClick="onClear"
            android:textColor="@color/primary_text"
            app:backgroundTint="@color/accent_color"
            android:text="@string/clear"
            />
    </LinearLayout>

    <Button
        android:id="@+id/btnEqual"
        android:textSize="24sp"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:insetBottom="0dp"
        android:insetTop="0dp"
        android:onClick="onEnter"
        android:textColor="@color/text_icons"
        app:backgroundTint="@color/primary_dark_color"
        android:text="@string/equal"
        />
</LinearLayout>